[project]
name = "qchemstuff"
version = "0.1"
authors = [
  { name="Tobias Kaczun", email="tobias.kaczun@iwr.uni-heidelberg.de" },
]
description = "A small collection of scripts for qchem for my PhD."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/ToKa96/qchem_stuff"
"Bug Tracker" = "https://github.com/ToKa96/qchem_stuff/issues"
[build-system]
requires = ["setuptools>=61.0", "numpy==1.23.1","pytest==7.1.3"]
build-backend = "setuptools.build_meta"
